--- a/app/views/user_mailer/confirmation_email.text.erb
+++ b/app/views/user_mailer/confirmation_email.text.erb
@@ -1,4 +1,4 @@
-Welcome to Higher Aspirations!
+Welcome to High Aspirations!
 
 Hi <%= @user.email %>,
 
@@ -9,4 +9,4 @@ Thank you for signing up! Please confirm your email address by visiting this lin
 If you didn't create an account, you can safely ignore this email.
 
 Thanks,
-The Higher Aspirations Team
+The High Aspirations Team
