--- a/app/views/user_mailer/confirmation_email.html.erb
+++ b/app/views/user_mailer/confirmation_email.html.erb
@@ -1,4 +1,4 @@
-<h1>Welcome to Higher Aspirations!</h1>
+<h1>Welcome to High Aspirations!</h1>
 
 <p>Hi <%= @user.email %>,</p>
 
@@ -12,5 +12,5 @@
 
 <p>
   Thanks,<br>
-  The Higher Aspirations Team
+  The High Aspirations Team
 </p>
