--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,6 +1,15 @@
 <div class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
   <div class="px-4 py-6 sm:px-0">
-    <h1 class="text-3xl font-bold text-gray-900 mb-6">Users</h1>
+    <div class="flex justify-between items-center mb-6">
+      <h1 class="text-3xl font-bold text-gray-900">Users</h1>
+      <%= link_to "New User", new_admin_user_path, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md shadow-sm text-white bg-indigo-600 hover:bg-indigo-700" %>
+    </div>
+
+    <% if notice.present? %>
+      <div class="rounded-md bg-green-50 p-4 mb-6">
+        <p class="text-sm font-medium text-green-800" id="notice"><%= notice %></p>
+      </div>
+    <% end %>
 
     <div class="flex flex-col">
       <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
@@ -52,7 +61,9 @@
                       <%= user.created_at.strftime("%b %d, %Y") %>
                     </td>
                     <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                      <%= link_to "View", admin_user_path(user), class: "text-indigo-600 hover:text-indigo-900" %>
+                      <%= link_to "View", admin_user_path(user), class: "text-indigo-600 hover:text-indigo-900 mr-4" %>
+                      <%= link_to "Edit", edit_admin_user_path(user), class: "text-indigo-600 hover:text-indigo-900 mr-4" %>
+                      <%= button_to "Delete", admin_user_path(user), method: :delete, class: "text-red-600 hover:text-red-900", data: { turbo_confirm: "Are you sure?" }, form: { class: "inline" } %>
                     </td>
                   </tr>
                 <% end %>
