--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -61,6 +61,63 @@
                           Users
                         <% end %>
                       </li>
+                      <li>
+                        <%= link_to admin_events_path, class: "group flex gap-x-3 rounded-md p-2 text-sm/6 font-semibold #{request.path.start_with?('/admin/events') ? 'bg-gray-50 text-indigo-600' : 'text-gray-700 hover:bg-gray-50 hover:text-indigo-600'}" do %>
+                          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="h-6 w-6 shrink-0 <%= request.path.start_with?('/admin/events') ? 'text-indigo-600' : 'text-gray-400 group-hover:text-indigo-600' %>">
+                            <path d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 0 1 2.25-2.25h13.5A2.25 2.25 0 0 1 21 7.5v11.25m-18 0A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75m-18 0v-7.5A2.25 2.25 0 0 1 5.25 9h13.5A2.25 2.25 0 0 1 21 11.25v7.5" stroke-linecap="round" stroke-linejoin="round" />
+                          </svg>
+                          Events
+                        <% end %>
+                      </li>
+                      <li>
+                        <%= link_to admin_event_types_path, class: "group flex gap-x-3 rounded-md p-2 text-sm/6 font-semibold #{request.path.start_with?('/admin/event_types') ? 'bg-gray-50 text-indigo-600' : 'text-gray-700 hover:bg-gray-50 hover:text-indigo-600'}" do %>
+                          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="h-6 w-6 shrink-0 <%= request.path.start_with?('/admin/event_types') ? 'text-indigo-600' : 'text-gray-400 group-hover:text-indigo-600' %>">
+                            <path d="M9.568 3H5.25A2.25 2.25 0 0 0 3 5.25v4.318c0 .597.237 1.17.659 1.591l9.581 9.581c.699.699 1.78.872 2.607.33a18.095 18.095 0 0 0 5.223-5.223c.542-.827.369-1.908-.33-2.607L11.16 3.66A2.25 2.25 0 0 0 9.568 3Z" stroke-linecap="round" stroke-linejoin="round" />
+                            <path d="M6 6h.008v.008H6V6Z" stroke-linecap="round" stroke-linejoin="round" />
+                          </svg>
+                          Event Types
+                        <% end %>
+                      </li>
+                      <li>
+                        <%= link_to admin_teams_path, class: "group flex gap-x-3 rounded-md p-2 text-sm/6 font-semibold #{request.path.start_with?('/admin/teams') ? 'bg-gray-50 text-indigo-600' : 'text-gray-700 hover:bg-gray-50 hover:text-indigo-600'}" do %>
+                          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="h-6 w-6 shrink-0 <%= request.path.start_with?('/admin/teams') ? 'text-indigo-600' : 'text-gray-400 group-hover:text-indigo-600' %>">
+                            <path d="M18 18.72a9.094 9.094 0 0 0 3.741-.479 3 3 0 0 0-4.682-2.72m.94 3.198.001.031c0 .225-.012.447-.037.666A11.944 11.944 0 0 1 12 21c-2.17 0-4.207-.576-5.963-1.584A6.062 6.062 0 0 1 6 18.719m12 0a5.971 5.971 0 0 0-.941-3.197m0 0A5.995 5.995 0 0 0 12 12.75a5.995 5.995 0 0 0-5.059 2.772m0 0a3 3 0 0 0-4.681 2.72 8.986 8.986 0 0 0 3.74.477m.94-3.197a5.971 5.971 0 0 0-.94 3.197M15 6.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Zm6 3a2.25 2.25 0 1 1-4.5 0 2.25 2.25 0 0 1 4.5 0Zm-13.5 0a2.25 2.25 0 1 1-4.5 0 2.25 2.25 0 0 1 4.5 0Z" stroke-linecap="round" stroke-linejoin="round" />
+                          </svg>
+                          Teams
+                        <% end %>
+                      </li>
+                      <li>
+                        <%= link_to admin_olympic_seasons_path, class: "group flex gap-x-3 rounded-md p-2 text-sm/6 font-semibold #{request.path.start_with?('/admin/olympic_seasons') ? 'bg-gray-50 text-indigo-600' : 'text-gray-700 hover:bg-gray-50 hover:text-indigo-600'}" do %>
+                          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="h-6 w-6 shrink-0 <%= request.path.start_with?('/admin/olympic_seasons') ? 'text-indigo-600' : 'text-gray-400 group-hover:text-indigo-600' %>">
+                            <path d="M12 21a9.004 9.004 0 0 0 8.716-6.747M12 21a9.004 9.004 0 0 1-8.716-6.747M12 21c2.485 0 4.5-4.03 4.5-9S14.485 3 12 3m0 18c-2.485 0-4.5-4.03-4.5-9S9.515 3 12 3m0 0a8.997 8.997 0 0 1 7.843 4.582M12 3a8.997 8.997 0 0 0-7.843 4.582m15.686 0A11.953 11.953 0 0 1 12 10.5c-2.998 0-5.74-1.1-7.843-2.918m15.686 0A8.959 8.959 0 0 1 21 12c0 .778-.099 1.533-.284 2.253m-2.873 0a8.959 8.959 0 0 0 .284-2.253m0 0a8.997 8.997 0 0 0-7.843-4.582m-7.843 4.582a8.997 8.997 0 0 1-7.843-4.582m15.686 0A11.953 11.953 0 0 1 12 10.5" stroke-linecap="round" stroke-linejoin="round" />
+                          </svg>
+                          Olympic Seasons
+                        <% end %>
+                      </li>
+                      <li>
+                        <%= link_to admin_event_registrations_path, class: "group flex gap-x-3 rounded-md p-2 text-sm/6 font-semibold #{request.path.start_with?('/admin/event_registrations') ? 'bg-gray-50 text-indigo-600' : 'text-gray-700 hover:bg-gray-50 hover:text-indigo-600'}" do %>
+                          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="h-6 w-6 shrink-0 <%= request.path.start_with?('/admin/event_registrations') ? 'text-indigo-600' : 'text-gray-400 group-hover:text-indigo-600' %>">
+                            <path d="M9 12.75 11.25 15 15 9.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" stroke-linecap="round" stroke-linejoin="round" />
+                          </svg>
+                          Registrations
+                        <% end %>
+                      </li>
+                      <li>
+                        <%= link_to admin_event_logs_path, class: "group flex gap-x-3 rounded-md p-2 text-sm/6 font-semibold #{request.path.start_with?('/admin/event_logs') ? 'bg-gray-50 text-indigo-600' : 'text-gray-700 hover:bg-gray-50 hover:text-indigo-600'}" do %>
+                          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="h-6 w-6 shrink-0 <%= request.path.start_with?('/admin/event_logs') ? 'text-indigo-600' : 'text-gray-400 group-hover:text-indigo-600' %>">
+                            <path d="M12 6v6m0 0v6m0-6h6m-6 0H6" stroke-linecap="round" stroke-linejoin="round" />
+                          </svg>
+                          Event Logs
+                        <% end %>
+                      </li>
+                      <li>
+                        <%= link_to admin_user_relationships_path, class: "group flex gap-x-3 rounded-md p-2 text-sm/6 font-semibold #{request.path.start_with?('/admin/user_relationships') ? 'bg-gray-50 text-indigo-600' : 'text-gray-700 hover:bg-gray-50 hover:text-indigo-600'}" do %>
+                          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="h-6 w-6 shrink-0 <%= request.path.start_with?('/admin/user_relationships') ? 'text-indigo-600' : 'text-gray-400 group-hover:text-indigo-600' %>">
+                            <path d="M18 18.72a9.094 9.094 0 0 0 3.741-.479 3 3 0 0 0-4.682-2.72m.94 3.198.001.031c0 .225-.012.447-.037.666A11.944 11.944 0 0 1 12 21c-2.17 0-4.207-.576-5.963-1.584A6.062 6.062 0 0 1 6 18.719m12 0a5.971 5.971 0 0 0-.941-3.197m0 0A5.995 5.995 0 0 0 12 12.75a5.995 5.995 0 0 0-5.059 2.772m0 0a3 3 0 0 0-4.681 2.72 8.986 8.986 0 0 0 3.74.477m.94-3.197a5.971 5.971 0 0 0-.94 3.197M15 6.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Zm6 3a2.25 2.25 0 1 1-4.5 0 2.25 2.25 0 0 1 4.5 0Zm-13.5 0a2.25 2.25 0 1 1-4.5 0 2.25 2.25 0 0 1 4.5 0Z" stroke-linecap="round" stroke-linejoin="round" />
+                          </svg>
+                          Relationships
+                        <% end %>
+                      </li>
                     </ul>
                   </li>
                 </ul>
@@ -98,6 +155,63 @@
                           <path d="M15 19.128a9.38 9.38 0 0 0 2.625.372 9.337 9.337 0 0 0 4.121-.952 4.125 4.125 0 0 0-7.533-2.493M15 19.128v-.003c0-1.113-.285-2.16-.786-3.07M15 19.128v.106A12.318 12.318 0 0 1 8.624 21c-2.331 0-4.512-.645-6.374-1.766l-.001-.109a6.375 6.375 0 0 1 11.964-3.07M12 6.375a3.375 3.375 0 1 1-6.75 0 3.375 3.375 0 0 1 6.75 0Zm8.25 2.25a2.625 2.625 0 1 1-5.25 0 2.625 2.625 0 0 1 5.25 0Z" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
                         Users
+                      <% end %>
+                    </li>
+                    <li>
+                      <%= link_to admin_events_path, class: "group flex gap-x-3 rounded-md p-2 text-sm/6 font-semibold #{request.path.start_with?('/admin/events') ? 'bg-gray-50 text-indigo-600' : 'text-gray-700 hover:bg-gray-50 hover:text-indigo-600'}" do %>
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="h-6 w-6 shrink-0 <%= request.path.start_with?('/admin/events') ? 'text-indigo-600' : 'text-gray-400 group-hover:text-indigo-600' %>">
+                          <path d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 0 1 2.25-2.25h13.5A2.25 2.25 0 0 1 21 7.5v11.25m-18 0A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75m-18 0v-7.5A2.25 2.25 0 0 1 5.25 9h13.5A2.25 2.25 0 0 1 21 11.25v7.5" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                        Events
+                      <% end %>
+                    </li>
+                    <li>
+                      <%= link_to admin_event_types_path, class: "group flex gap-x-3 rounded-md p-2 text-sm/6 font-semibold #{request.path.start_with?('/admin/event_types') ? 'bg-gray-50 text-indigo-600' : 'text-gray-700 hover:bg-gray-50 hover:text-indigo-600'}" do %>
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="h-6 w-6 shrink-0 <%= request.path.start_with?('/admin/event_types') ? 'text-indigo-600' : 'text-gray-400 group-hover:text-indigo-600' %>">
+                          <path d="M9.568 3H5.25A2.25 2.25 0 0 0 3 5.25v4.318c0 .597.237 1.17.659 1.591l9.581 9.581c.699.699 1.78.872 2.607.33a18.095 18.095 0 0 0 5.223-5.223c.542-.827.369-1.908-.33-2.607L11.16 3.66A2.25 2.25 0 0 0 9.568 3Z" stroke-linecap="round" stroke-linejoin="round" />
+                          <path d="M6 6h.008v.008H6V6Z" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                        Event Types
+                      <% end %>
+                    </li>
+                    <li>
+                      <%= link_to admin_teams_path, class: "group flex gap-x-3 rounded-md p-2 text-sm/6 font-semibold #{request.path.start_with?('/admin/teams') ? 'bg-gray-50 text-indigo-600' : 'text-gray-700 hover:bg-gray-50 hover:text-indigo-600'}" do %>
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="h-6 w-6 shrink-0 <%= request.path.start_with?('/admin/teams') ? 'text-indigo-600' : 'text-gray-400 group-hover:text-indigo-600' %>">
+                          <path d="M18 18.72a9.094 9.094 0 0 0 3.741-.479 3 3 0 0 0-4.682-2.72m.94 3.198.001.031c0 .225-.012.447-.037.666A11.944 11.944 0 0 1 12 21c-2.17 0-4.207-.576-5.963-1.584A6.062 6.062 0 0 1 6 18.719m12 0a5.971 5.971 0 0 0-.941-3.197m0 0A5.995 5.995 0 0 0 12 12.75a5.995 5.995 0 0 0-5.059 2.772m0 0a3 3 0 0 0-4.681 2.72 8.986 8.986 0 0 0 3.74.477m.94-3.197a5.971 5.971 0 0 0-.94 3.197M15 6.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Zm6 3a2.25 2.25 0 1 1-4.5 0 2.25 2.25 0 0 1 4.5 0Zm-13.5 0a2.25 2.25 0 1 1-4.5 0 2.25 2.25 0 0 1 4.5 0Z" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                        Teams
+                      <% end %>
+                    </li>
+                    <li>
+                      <%= link_to admin_olympic_seasons_path, class: "group flex gap-x-3 rounded-md p-2 text-sm/6 font-semibold #{request.path.start_with?('/admin/olympic_seasons') ? 'bg-gray-50 text-indigo-600' : 'text-gray-700 hover:bg-gray-50 hover:text-indigo-600'}" do %>
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="h-6 w-6 shrink-0 <%= request.path.start_with?('/admin/olympic_seasons') ? 'text-indigo-600' : 'text-gray-400 group-hover:text-indigo-600' %>">
+                          <path d="M12 21a9.004 9.004 0 0 0 8.716-6.747M12 21a9.004 9.004 0 0 1-8.716-6.747M12 21c2.485 0 4.5-4.03 4.5-9S14.485 3 12 3m0 18c-2.485 0-4.5-4.03-4.5-9S9.515 3 12 3m0 0a8.997 8.997 0 0 1 7.843 4.582M12 3a8.997 8.997 0 0 0-7.843 4.582m15.686 0A11.953 11.953 0 0 1 12 10.5c-2.998 0-5.74-1.1-7.843-2.918m15.686 0A8.959 8.959 0 0 1 21 12c0 .778-.099 1.533-.284 2.253m-2.873 0a8.959 8.959 0 0 0 .284-2.253m0 0a8.997 8.997 0 0 0-7.843-4.582m-7.843 4.582a8.997 8.997 0 0 1-7.843-4.582m15.686 0A11.953 11.953 0 0 1 12 10.5" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                        Olympic Seasons
+                      <% end %>
+                    </li>
+                    <li>
+                      <%= link_to admin_event_registrations_path, class: "group flex gap-x-3 rounded-md p-2 text-sm/6 font-semibold #{request.path.start_with?('/admin/event_registrations') ? 'bg-gray-50 text-indigo-600' : 'text-gray-700 hover:bg-gray-50 hover:text-indigo-600'}" do %>
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="h-6 w-6 shrink-0 <%= request.path.start_with?('/admin/event_registrations') ? 'text-indigo-600' : 'text-gray-400 group-hover:text-indigo-600' %>">
+                          <path d="M9 12.75 11.25 15 15 9.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                        Registrations
+                      <% end %>
+                    </li>
+                    <li>
+                      <%= link_to admin_event_logs_path, class: "group flex gap-x-3 rounded-md p-2 text-sm/6 font-semibold #{request.path.start_with?('/admin/event_logs') ? 'bg-gray-50 text-indigo-600' : 'text-gray-700 hover:bg-gray-50 hover:text-indigo-600'}" do %>
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="h-6 w-6 shrink-0 <%= request.path.start_with?('/admin/event_logs') ? 'text-indigo-600' : 'text-gray-400 group-hover:text-indigo-600' %>">
+                          <path d="M12 6v6m0 0v6m0-6h6m-6 0H6" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                        Event Logs
+                      <% end %>
+                    </li>
+                    <li>
+                      <%= link_to admin_user_relationships_path, class: "group flex gap-x-3 rounded-md p-2 text-sm/6 font-semibold #{request.path.start_with?('/admin/user_relationships') ? 'bg-gray-50 text-indigo-600' : 'text-gray-700 hover:bg-gray-50 hover:text-indigo-600'}" do %>
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="h-6 w-6 shrink-0 <%= request.path.start_with?('/admin/user_relationships') ? 'text-indigo-600' : 'text-gray-400 group-hover:text-indigo-600' %>">
+                          <path d="M18 18.72a9.094 9.094 0 0 0 3.741-.479 3 3 0 0 0-4.682-2.72m.94 3.198.001.031c0 .225-.012.447-.037.666A11.944 11.944 0 0 1 12 21c-2.17 0-4.207-.576-5.963-1.584A6.062 6.062 0 0 1 6 18.719m12 0a5.971 5.971 0 0 0-.941-3.197m0 0A5.995 5.995 0 0 0 12 12.75a5.995 5.995 0 0 0-5.059 2.772m0 0a3 3 0 0 0-4.681 2.72 8.986 8.986 0 0 0 3.74.477m.94-3.197a5.971 5.971 0 0 0-.94 3.197M15 6.75a3 3 0 1 1-6 0 3 3 0 0 1 6 0Zm6 3a2.25 2.25 0 1 1-4.5 0 2.25 2.25 0 0 1 4.5 0Zm-13.5 0a2.25 2.25 0 1 1-4.5 0 2.25 2.25 0 0 1 4.5 0Z" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                        Relationships
                       <% end %>
                     </li>
                   </ul>
